--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
     "@mui/styled-engine-sc": "^5.14.8",
     "bootstrap": "^5.3.1",
@@ -23,8 +24,10 @@
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.2",
     "sass": "^1.66.1",
-    "styled-components": "^5.3.11"
+    "styled-components": "^5.3.11",
+    "superagent": "^8.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
